# gpt-educational

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
src/: bpe.py  compression.ipynb  gpt.py  test_bpe.py  test_gpt.py  test_training.py  training.py
