[project]
name = "gpt-educational"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "fire>=0.7.0",
    "huggingface-hub>=0.29.1",
    "ipykernel>=6.29.5",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "pyarrow>=19.0.1",
    "pydantic>=2.10.6",
    "pyyaml>=6.0.2",
    "tiktoken>=0.9.0",
    "torch>=2.6.0",
    "zstandard>=0.23.0",
    "zstd>=1.5.6.6",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.7",
]
